[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/medium_theme.tres" type="Theme" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://theme/big_theme.tres" type="Theme" id=3]
[ext_resource path="res://theme/small_theme.tres" type="Theme" id=4]

[node name="main" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 178.0
margin_top = 23.0
margin_right = 846.0
margin_bottom = 577.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 668.0
margin_bottom = 168.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 668.0
margin_bottom = 31.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 324.0
margin_bottom = 31.0
text = "Time Now"
align = 1
valign = 1

[node name="time_now_raw" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 472.0
margin_bottom = 31.0
text = "00:00:00"
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 35.0
margin_right = 668.0
margin_bottom = 168.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer"]
editor/display_folded = true
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 126.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
margin_right = 81.0
margin_bottom = 119.0
size_flags_horizontal = 3

[node name="time_now" type="Label" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
margin_left = 85.0
margin_top = 9.0
margin_right = 525.0
margin_bottom = 110.0
theme = ExtResource( 3 )
text = "00:00:00"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
editor/display_folded = true
margin_left = 529.0
margin_right = 654.0
margin_bottom = 119.0
size_flags_horizontal = 3

[node name="ampm_label" type="Label" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 119.0
size_flags_vertical = 1
text = "AM"
align = 1
valign = 1

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer"]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 119.0
size_flags_horizontal = 3

[node name="clock_mode_buttons" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer"]
editor/display_folded = true
margin_left = 40.0
margin_right = 116.0
margin_bottom = 119.0
alignment = 1

[node name="button_ampm" type="Button" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer/clock_mode_buttons"]
margin_right = 76.0
margin_bottom = 37.0
toggle_mode = true
text = "AMPM"

[node name="button_24hr" type="Button" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer/clock_mode_buttons"]
margin_top = 41.0
margin_right = 76.0
margin_bottom = 78.0
toggle_mode = true
text = "24HR"

[node name="button_work" type="Button" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer/clock_mode_buttons"]
margin_top = 82.0
margin_right = 76.0
margin_bottom = 119.0
toggle_mode = true
text = "WORK"

[node name="Control2" type="Control" parent="VBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2/HBoxContainer"]
margin_left = 120.0
margin_right = 125.0
margin_bottom = 119.0
rect_min_size = Vector2( 5, 0 )

[node name="schedule" type="PanelContainer" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 668.0
margin_bottom = 322.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/schedule"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 143.0
theme = ExtResource( 4 )
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/schedule/HBoxContainer"]
margin_left = 43.0
margin_right = 219.0
margin_bottom = 136.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer"]
margin_right = 176.0
margin_bottom = 31.0
size_flags_vertical = 3
text = "Wake up time:"
align = 2
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 176.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "Work start time:"
align = 2
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 176.0
margin_bottom = 101.0
size_flags_vertical = 3
text = "Work stop time:"
align = 2
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 176.0
margin_bottom = 136.0
size_flags_vertical = 3
text = "Bedtime:"
align = 2
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/schedule/HBoxContainer"]
margin_left = 223.0
margin_right = 610.0
margin_bottom = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2"]
margin_right = 387.0
margin_bottom = 31.0

[node name="wake_hour" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 158.0
margin_bottom = 31.0
size_flags_stretch_ratio = 1.5
min_value = 1.0
max_value = 12.0
value = 7.0
rounded = true
align = 1

[node name="wake_minute" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 31.0
max_value = 45.0
step = 15.0
rounded = true
align = 1

[node name="wake_ampm" type="OptionButton" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 324.0
margin_right = 387.0
margin_bottom = 31.0
text = "AM"
items = [ "AM", null, false, -1, null, "PM", null, false, -1, null ]
selected = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2"]
margin_top = 35.0
margin_right = 387.0
margin_bottom = 66.0

[node name="work_hour" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 158.0
margin_bottom = 31.0
min_value = 1.0
max_value = 12.0
value = 8.0
rounded = true
align = 1

[node name="work_minute" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 31.0
max_value = 45.0
step = 15.0
rounded = true
align = 1

[node name="work_ampm" type="OptionButton" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 324.0
margin_right = 387.0
margin_bottom = 31.0
text = "AM"
items = [ "AM", null, false, -1, null, "PM", null, false, -1, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2"]
margin_top = 70.0
margin_right = 387.0
margin_bottom = 101.0

[node name="free_hour" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 158.0
margin_bottom = 31.0
min_value = 1.0
max_value = 12.0
value = 5.0
rounded = true
align = 1

[node name="free_minute" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 31.0
max_value = 45.0
step = 15.0
rounded = true
align = 1

[node name="free_ampm" type="OptionButton" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 324.0
margin_right = 387.0
margin_bottom = 31.0
text = "PM"
items = [ "AM", null, false, -1, null, "PM", null, false, -1, null ]
selected = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2"]
margin_top = 105.0
margin_right = 387.0
margin_bottom = 136.0

[node name="sleep_hour" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_right = 158.0
margin_bottom = 31.0
min_value = 1.0
max_value = 12.0
value = 10.0
rounded = true
align = 1

[node name="sleep_minute" type="SpinBox" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 31.0
max_value = 45.0
step = 15.0
rounded = true
align = 1

[node name="sleep_ampm" type="OptionButton" parent="VBoxContainer/schedule/HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 324.0
margin_right = 387.0
margin_bottom = 31.0
text = "PM"
items = [ "AM", null, false, -1, null, "PM", null, false, -1, null ]
selected = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_top = 326.0
margin_right = 668.0
margin_bottom = 396.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 63.0
theme = ExtResource( 4 )
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
margin_right = 158.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 21.0
text = "Hours per Day:"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 158.0
margin_bottom = 56.0

[node name="new_hours_per_day" type="SpinBox" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 158.0
margin_bottom = 31.0
min_value = 1.0
max_value = 1e+06
value = 24.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
editor/display_folded = true
margin_left = 208.0
margin_right = 395.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 187.0
margin_bottom = 21.0
text = "Minutes Per Hour:"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 25.0
margin_right = 187.0
margin_bottom = 56.0

[node name="new_minutes_per_hour" type="SpinBox" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 14.0
margin_right = 172.0
margin_bottom = 31.0
min_value = 1.0
max_value = 1e+06
value = 60.0

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
editor/display_folded = true
margin_left = 445.0
margin_right = 654.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer3"]
margin_right = 209.0
margin_bottom = 21.0
text = "Seconds Per Minute:"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer3"]
margin_top = 25.0
margin_right = 209.0
margin_bottom = 56.0

[node name="new_seconds_per_minute" type="SpinBox" parent="VBoxContainer/PanelContainer2/HBoxContainer/VBoxContainer3/CenterContainer"]
margin_left = 25.0
margin_right = 183.0
margin_bottom = 31.0
min_value = 1.0
max_value = 1e+06
value = 60.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 400.0
margin_right = 668.0
margin_bottom = 431.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 106.0
margin_right = 314.0
margin_bottom = 31.0
text = "New second = "

[node name="seconds_factor" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 318.0
margin_right = 430.0
margin_bottom = 31.0
text = "3.14159"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 434.0
margin_right = 562.0
margin_bottom = 31.0
text = "seconds."

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 435.0
margin_right = 668.0
margin_bottom = 554.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 661.0
margin_bottom = 112.0

[node name="Label" type="RichTextLabel" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 654.0
bbcode_enabled = true
bbcode_text = "New Time:"
text = "New Time:"

[node name="new_time" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 654.0
margin_bottom = 105.0
theme = ExtResource( 3 )
text = "00:00:00"
align = 1
valign = 1

